--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -80,6 +80,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/default_status"/>
 
+            <ImageButton
+                android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_white"
+                android:onClick="@{viewModel::onFavoriteClick}"
+                android:src="@{viewModel.isFavorited ? @drawable/ic_favorited : @drawable/ic_favorite}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/description"/>
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </layout>
